complete 6